[package]
name = "quicquinn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
quinn = "0.10.2"
rustls = { version = "0.21", features = ["quic", "dangerous_configuration"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rcgen = "0.12.0"
eyre = "0.6.12"
color-eyre = "0.6.2"
clap = { version = "4.5.0", features = ["derive"] }
